Bug #6081: Updating the Leo picture on mobile device and the year in the footer copyright notice - Updated the Leo picture on the mobile view as on desktop view. - Updated the year of the footer copyright text.

--- a/revolv/static/css/screen.css
+++ b/revolv/static/css/screen.css
@@ -14107,7 +14107,7 @@ a.How_it_Works:hover {
 }
 @media (max-width: 500px) {
     #myCarousel .carousel-fourth-img .background-image-size_home{
-        content:url(../images/mobile/Leonardo_Dicaprio_414*515.jpg);
+        content:url(../images/mobile/mobile_slide4.jpg);
     }
     #myCarousel .carousel-third-img .background-image-size_home{
         content:url(../images/mobile/mobile_slide1.jpg);
